modal scrollbar and studentapply checkbox dot fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16976,8 +16976,8 @@ input.invalid {
   height: 7.5px;
   background: #f37021;
   position: absolute;
-  top: 5.5px;
-  left: 3.2px;
+  top: 5.4px;
+  left: 3.4px;
   border-radius: 100%;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
