--- a/assets/scss/partials/pages/_studentsapply.scss
+++ b/assets/scss/partials/pages/_studentsapply.scss
@@ -259,8 +259,8 @@
       height: 7.5px;
       background: $hover-2;
       position: absolute;
-      top: 5.5px;
-      left: 3.2px;
+      top: 5.4px;
+      left: 3.4px;
       border-radius: 100%;
       -webkit-transition: all 0.2s ease;
       transition: all 0.2s ease;
